--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,9 @@
 <!doctype html>
+<html>
+  <head>
+    <body>
+<!-- Last reset Dec 13 -->
+      <h1>Homepage</h1>
+    </body>
+    <head>
+</html>
