--- a/DevHub-Login.html
+++ b/DevHub-Login.html
@@ -3,7 +3,7 @@
 <head>
 <script src="script.js"></script>
 <body>
-<button href="login()">Open Login</button>
+<button OnClick="login()">Open Login</button>
 </body>
 </head>
 </html>
