--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <script src="script.js"></script>
     <body>
 <!-- Last reset Dec 13 -->
       <h1>Homepage</h1>
