--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html>
   <head>
     <script src="script.js"></script>
+    <style>
+      span.red {
+        color: #FF0000;
+      }
+      span.orange {
+       color: #FFA500; 
+      }
+    </style>
     <body>
 <!-- Last reset Dec 13 -->
       <h1>Homepage</h1>
+      <p>Welcome QuickMash Studios Homepage.</p>
+      <div class="events">
+        <h3>Events</h3>
+        <h4>Important Events</h4>
+        <div class="line">
+        <p>YouTube channal <span class="red"><b>SHUT DOWN</b></span></p>
+        </div>
+      </div>
     </body>
     <head>
 </html>
