--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html>
   <head>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
     <style>
       span.red {
-        color: #FF0000;
-      }
-      span.orange {
-       color: #FFA500; 
-      }
     </style>
     <body>
 <!-- Last reset Dec 13 -->
