--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="script.js"></script>
+    <script src="https://github.com/QuickMash/CustomAlertsJs/blob/6a407fe9a579cd7b250d49709e6181a6c5c9f61f/AScript.js"></script>
     <link rel="stylesheet" href="styles.css">
     <style>
       span.red {
