--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <script src="script.js"></script>
     <script src="https://github.com/QuickMash/CustomAlertsJs/blob/6a407fe9a579cd7b250d49709e6181a6c5c9f61f/AScript.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <style>
       span.red {
     </style>
