--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html>
+  <title>Homepage</title>
   <head>
+    <!-- JavaScript -->
     <script src="script.js"></script>
     <script src="https://github.com/QuickMash/CustomAlertsJs/blob/6a407fe9a579cd7b250d49709e6181a6c5c9f61f/AScript.js"></script>
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://github.com/QuickMash/CustomAlertsJs/blob/08f0efeb5b7d3193ad59144e16a87268e70d5b16/ACSS.css">
     <style>
       span.red {
     </style>
