--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         <p>YouTube channal <span class="red"><b>SHUT DOWN</b></span></p>
         </div>
       </div>
+      <br />
+<div class="row text-center">
+  <div>
+    <button class="button large round success">Success notification</button>
+  </div>
+  <div>
+    <button class="button large round alert">Error notification</button>
+  </div>
+</div>
     </body>
     <head>
 </html>
