--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <h3>Events</h3>
         <h4>Important Events</h4>
         <div class="line">
-        <p>YouTube channal <span class="red"><b>SHUT DOWN</b></span></p>
+          <h3>Info</h3>
+        <p>YouTube channal <span class="green"><b>Online</b></span></p>
         </div>
       </div>
       <br />
