--- a/index.html
+++ b/index.html
@@ -1,37 +1,10 @@
 <!doctype html>
 <html>
-  <title>Homepage</title>
   <head>
-    <!-- JavaScript -->
-    <script src="script.js"></script>
-    <script src="https://github.com/QuickMash/CustomAlertsJs/blob/6a407fe9a579cd7b250d49709e6181a6c5c9f61f/AScript.js"></script>
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://github.com/QuickMash/CustomAlertsJs/blob/08f0efeb5b7d3193ad59144e16a87268e70d5b16/ACSS.css">
-    <style>
-      span.red {
-    </style>
-    <body>
-<!-- Last reset Dec 13 -->
-      <h1>Homepage</h1>
-      <p>Welcome QuickMash Studios Homepage.</p>
-      <div class="events">
-        <h3>Events</h3>
-        <h4>Important Events</h4>
-        <div class="line">
-          <h3>Info</h3>
-        <p>YouTube channal <span class="green"><b>Online</b></span></p>
-        </div>
-      </div>
-      <br />
-<div class="row text-center">
-  <div>
-    <button class="button large round success">Success notification</button>
-  </div>
-  <div>
-    <button class="button large round alert">Error notification</button>
-  </div>
-</div>
-    </body>
-    <head>
+    <title>QuickMash</title>
+  </head>
+  <body>
+    <h1>Homepage</h1>
+    <h2>Links</h2>
+  </body>
 </html>
