--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   <body>
     <h1>Homepage</h1>
     <h2>Links</h2>
+    <a href="http://QuickStealLS.com">QuickStealLS.com(broke)</a>
+    <a href="https://Quickmash.github.io/search">QuickSearch</a>
   </body>
 </html>
