--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h2>Links</h2>
     <a href="http://QuickStealLS.com">QuickStealLS.com(broke)</a>
     <a href="https://Quickmash.github.io/search">QuickSearch</a>
+    <a href="https://discord.gg/X8gY7qBT55">Discord(QuickStealLS)</a>
   </body>
 </html>
