--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html>
   <head>
-    <title>QuickMash</title>
+    <title>QuickMash's website</title>
   </head>
   <body>
+    <header>
     <h1>Homepage</h1>
+    </header>
     <h2>Links</h2>
     <a href="http://QuickStealLS.com">QuickStealLS.com(broke)</a>
     <a href="https://Quickmash.github.io/search">QuickSearch</a>
     <a href="https://discord.gg/X8gY7qBT55">Discord(QuickStealLS)</a>
+    <footer>
+      <p>Version 2.0.1 <strong>BETA</strong></p>
+      <a href="changelog.html">Click Here for change log</a>
+    </footer>
   </body>
 </html>
