--- a/index.html
+++ b/index.html
@@ -1,19 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>QuickMash's website</title>
-  </head>
-  <body>
-    <header>
-    <h1>Homepage</h1>
-    </header>
-    <h2>Links</h2>
-    <a href="http://QuickStealLS.com">QuickStealLS.com(broke)</a>
-    <a href="https://Quickmash.github.io/search">QuickSearch</a>
-    <a href="https://discord.gg/X8gY7qBT55">Discord(QuickStealLS)</a>
+<head>
+    <title>Your Homepage</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f7f7f7;
+        }
+
+        .container {
+            max-width: 960px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        h1 {
+            font-size: 36px;
+            margin: 0;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+            margin-bottom: 20px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background-color: #333;
+            color: #fff;
+            font-size: 14px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>Welcome to Your Homepage</h1>
+        </header>
+        <p>This is a clean and simple webpage.</p>
+        <p>You can customize and add more content to make it your own.</p>
+    </div>
     <footer>
-      <p>Version 2.0.1 <strong>BETA</strong></p>
-      <a href="changelog.html">Click Here for change log</a>
+        &copy; 2023 Your Homepage. All rights reserved.
     </footer>
-  </body>
+</body>
 </html>
