--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f7f7f7;
+            overflow: hidden;
         }
 
         .container {
@@ -39,6 +39,23 @@
             color: #fff;
             font-size: 14px;
         }
+
+        .animated-background {
+            animation: animateBackground 5s linear infinite;
+            background-color: #ffffff;
+        }
+
+        @keyframes animateBackground {
+            0% {
+                background-color: #ffffff;
+            }
+            50% {
+                background-color: #a3d9ff;
+            }
+            100% {
+                background-color: #ffffff;
+            }
+        }
     </style>
 </head>
 <body>
@@ -52,5 +69,6 @@
     <footer>
         &copy; 2023 Your Homepage. All rights reserved.
     </footer>
+    <div class="animated-background"></div>
 </body>
 </html>
