--- a/index.html
+++ b/index.html
@@ -1,60 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Navigation Page</title>
+  <title>QuickMash's Blog</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 10px;
-      text-align: center;
-    }
-
-    nav {
-      background-color: #f2f2f2;
-      padding: 10px;
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav ul li {
-      display: inline-block;
-      margin-right: 10px;
-    }
-
-    nav ul li a {
-      color: #333;
-      text-decoration: none;
-      padding: 5px;
-    }
-
-    nav ul li a:hover {
-      background-color: #333;
-      color: #fff;
-    }
   </style>
 </head>
 <body>
-  <header>
-    <h1>My Website</h1>
-  </header>
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
+  <h1>QuickMash's Blog</h1>
+  <p>1/26/24</p>
+  <P>TryHackMe
+  https://tryhackme.com/room/walkinganapplication
+  </P>
 </body>
 </html>
