--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>QuickMash's Blog</title>
-  <style>
-  </style>
+  <script>
+    function newload() {
+      window.location = quickmash.github.io/search
+    }
+  </script>
 </head>
-<body>
-  <h1>QuickMash's Blog</h1>
-  <p>1/26/24</p>
-  <P>TryHackMe
-  https://tryhackme.com/room/walkinganapplication
-  </P>
-</body>
+<body onload="newload()"><noscript><p>Error! JavaScript is disabled.</p></noscript></body>
 </html>
