--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <script>
     function newload() {
-      window.location = quickmash.github.io/search
+      window.location = ('quickmash.github.io/search')
     }
   </script>
 </head>
