--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     function newload() {
       window.location = ('quickmash.github.io/search')
     }
+    newload()
   </script>
 </head>
-<body onload="newload()"><noscript><p>Error! JavaScript is disabled.</p></noscript></body>
+<body><noscript><p>Error! JavaScript is disabled.</p></noscript></body>
 </html>
