--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     function newload() {
       window.location = ('quickmash.github.io/search')
     }
-    newload()
   </script>
 </head>
-<body><noscript><p>Error! JavaScript is disabled.</p></noscript></body>
+  <body onload="newload()"
+  <h1>
+    Click to visit quickmash.cc
+  </h1>
+  <button onclick="newload()">Click Me</button>
+  </body>
 </html>
