--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <script>
     function newload() {
-      window.location = ('quickmash.github.io/search')
+      window.location = ('https://quickmash.github.io/search');
     }
   </script>
 </head>
-  <body onload="newload()"
+<body onload="newload()">
   <h1>
     Click to visit quickmash.cc
   </h1>
   <button onclick="newload()">Click Me</button>
-  </body>
+</body>
 </html>
