--- a/index.html
+++ b/index.html
@@ -2,13 +2,7 @@
 <html>
 <head>
   <title>Redirecting...</title>
-  <script>
-    function redirect() {
-      window.location.href = "https://quickmash.cc";
-    }
-    // Redirect after 3 seconds to give users a chance to read the message
-    setTimeout(redirect, 3000);
-  </script>
+  <meta http-equiv="refresh" content="0; url=https://quickmash.cc">
 </head>
 <body>
   <h1>You should be redirected</h1>
